# MConfigR

./: .gitignore  Cargo.toml  Readme.md
src/: lib.rs  main.rs  mconfig.rs  mconfigurator.rs  mcstring.rs
src/mconfig/: mconfig_builder.rs
src/mconfigurator/: mconfig_builder.rs
