[package]
name = "mconfig"
version = "0.1.0"
edition = "2021"
description = "A simple key-value library and viewer utility."

[[bin]]
name = "mconfig_demo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clap = { version = "4.4.18", features = ["cargo"] }
